--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
 <body>
     <div class="container">
         <h1>Taleforge</h1>
-        <p>Redirecting you to the password reset page...</p>
+        <p id="message">Redirecting you to the password reset page...</p>
         <div class="spinner"></div>
-        <p>If the app doesn't open automatically, <a href="#" onclick="manualRedirect()" class="button">click here</a> to try again.</p>
+        <p id="fallback-message">If the app doesn't open automatically, <a href="#" onclick="manualRedirect()" class="button">click here</a> to try again.</p>
+        <p id="mobile-instructions" style="display: none; font-size: 14px; color: #8E8E93; margin-top: 16px;">
+            Make sure you have the Taleforge Expo Go app open on your device.
+        </p>
     </div>
 
     <script>
@@ -88,12 +91,22 @@
             const accessToken = getUrlParameter('access_token');
             const refreshToken = getUrlParameter('refresh_token');
 
-            // Get the redirect URL from the query parameter
-            const redirectBase = getUrlParameter('redirect') || 'myapp://auth/reset-password';
+            // Check if we're on mobile (Android/iOS)
+            const isMobile = /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
 
-            // Construct the full deep link URL with parameters
-            let deepLinkUrl = redirectBase;
+            let deepLinkUrl;
 
+            if (isMobile) {
+                // For Expo Go on mobile, use the Expo development URL
+                // IMPORTANT: Replace 192.168.1.108 with your computer's local IP address
+                // Find your IP with: hostname -I (Linux) or ifconfig/ipconfig (macOS/Windows)
+                deepLinkUrl = 'exp://192.168.1.108:8081/--/auth/reset-password';
+            } else {
+                // For desktop or when custom scheme should work
+                deepLinkUrl = 'myapp://auth/reset-password';
+            }
+
+            // Add parameters
             const params = [];
             if (token) params.push(`token=${encodeURIComponent(token)}`);
             if (type) params.push(`type=${encodeURIComponent(type)}`);
@@ -115,6 +128,15 @@
 
         // Auto redirect when page loads
         window.onload = function() {
+            // Check if mobile and update UI accordingly
+            const isMobile = /Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+
+            if (isMobile) {
+                document.getElementById('message').textContent = 'Opening Taleforge app...';
+                document.getElementById('fallback-message').innerHTML = 'If the app doesn\'t open, make sure Expo Go is installed and <a href="#" onclick="manualRedirect()" class="button">try again</a>.';
+                document.getElementById('mobile-instructions').style.display = 'block';
+            }
+
             setTimeout(function() {
                 manualRedirect();
             }, 1000); // Wait 1 second before redirecting
