Update deep link URL for mobile reset password

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 // For Expo Go on mobile, use the Expo development URL
                 // IMPORTANT: Replace 192.168.1.108 with your computer's local IP address
                 // Find your IP with: hostname -I (Linux) or ifconfig/ipconfig (macOS/Windows)
-                deepLinkUrl = 'exp://192.168.1.108:8081/--/auth/reset-password';
+                deepLinkUrl = 'exp://192.168.1.108:8081/--/reset-password';
             } else {
                 // For desktop or when custom scheme should work
                 deepLinkUrl = 'myapp://auth/reset-password';
