--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
         <h1>Taleforge</h1>
         <p id="message">Redirecting you to the password reset page...</p>
         <div class="spinner"></div>
+
+        <!-- Debug info - shows what parameters were received -->
+        <div id="debug-info" style="background: #1C1C1E; padding: 10px; border-radius: 5px; margin: 15px 0; font-size: 12px; font-family: monospace; display: none;">
+            <strong>🔍 Debug Info:</strong><br>
+            <span id="debug-content">Loading...</span>
+        </div>
+
         <p id="fallback-message">If the app doesn't open automatically, <a href="#" onclick="manualRedirect()" class="button">click here</a> to try again.</p>
         <p id="mobile-instructions" style="display: none; font-size: 14px; color: #8E8E93; margin-top: 16px;">
             Make sure you have the Taleforge Expo Go app open on your device.
@@ -90,14 +97,37 @@
             const type = getUrlParameter('type');
             const accessToken = getUrlParameter('access_token');
             const refreshToken = getUrlParameter('refresh_token');
+            const redirect = getUrlParameter('redirect');
 
-            console.log('Redirect page received parameters:', {
-                token: token ? 'present' : 'missing',
-                type: type || 'missing',
-                accessToken: accessToken ? 'present' : 'missing',
-                refreshToken: refreshToken ? 'present' : 'missing',
-                fullUrl: window.location.href
+            console.log('=== REDIRECT PAGE DEBUG ===');
+            console.log('Full URL:', window.location.href);
+            console.log('All URL parameters:');
+            const urlParams = new URLSearchParams(window.location.search);
+            for (let [key, value] of urlParams) {
+                console.log(`  ${key}: ${value}`);
+            }
+            console.log('Extracted parameters:', {
+                token: token || 'NOT FOUND',
+                type: type || 'NOT FOUND',
+                accessToken: accessToken || 'NOT FOUND',
+                refreshToken: refreshToken || 'NOT FOUND',
+                redirect: redirect || 'NOT FOUND'
             });
+            console.log('========================');
+
+            // Display debug info visually on the page
+            let debugHtml = 'Full URL: ' + window.location.href + '<br><br>';
+            debugHtml += 'Parameters found:<br>';
+            const allParams = [];
+            for (let [key, value] of urlParams) {
+                allParams.push(`${key}: ${value}`);
+            }
+            debugHtml += allParams.join('<br>') || 'NONE';
+
+            debugHtml += '<br><br>Constructed deep link:<br>' + constructDeepLink();
+
+            document.getElementById('debug-content').innerHTML = debugHtml;
+            document.getElementById('debug-info').style.display = 'block';
         }
 
         // Function to construct the deep link URL
@@ -119,7 +149,7 @@
                 deepLinkUrl = 'exp://192.168.1.108:8081/--/reset-password';
             } else {
                 // For desktop or when custom scheme should work
-                deepLinkUrl = 'myapp://auth/reset-password';
+                deepLinkUrl = 'myapp://reset-password';
             }
 
             // Add parameters
@@ -146,7 +176,7 @@
 
         // Auto redirect when page loads
         window.onload = function() {
-            // Debug what parameters we received
+            // Debug what parameters we received (shows debug info on page)
             debugParameters();
 
             // Check if mobile and update UI accordingly
@@ -158,14 +188,14 @@
                 document.getElementById('mobile-instructions').style.display = 'block';
             }
 
-            // For debugging, show the URL that will be constructed
+            // For debugging, wait longer to show debug info before redirecting
             setTimeout(function() {
                 const deepLinkUrl = constructDeepLink();
                 console.log('About to redirect to:', deepLinkUrl);
-                // Show the URL briefly before redirecting
-                document.getElementById('message').textContent = 'Redirecting...';
+                // Update message to show redirecting
+                document.getElementById('message').textContent = 'Redirecting to app...';
                 manualRedirect();
-            }, 2000); // Wait 2 seconds to show debug info
+            }, 3000); // Wait 3 seconds to show debug info
         };
     </script>
 </body>
