--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                 // Run: npx expo start --tunnel
                 // Then replace this URL with the tunnel URL shown in terminal
                 deepLinkUrl = 'exp://localhost:8081/--/reset-password';
+                // Use the real reset-password route (moved to root level for deep linking)
                 console.log('Using deep link:', deepLinkUrl);
 
                 // Alternative: If using tunnel, uncomment and use:
