--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 // For Expo Go on mobile, use the tunnel URL for external access
                 // Run: npx expo start --tunnel
                 // Then replace this URL with the tunnel URL shown in terminal
-                deepLinkUrl = 'exp://localhost:8081/--/reset-password';
+                deepLinkUrl = 'exp://192.168.1.108:8081/--/reset-password';
                 // Use the real reset-password route (moved to root level for deep linking)
                 console.log('Using deep link:', deepLinkUrl);
 
